# mini-bitoin

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/blocks/: block.rs  block_helpers.rs  mod.rs
src/crypto/: crypto_utils.rs  hash_helper.rs  mod.rs  private_key.rs  s256_field.rs  s256_point.rs  secret_field.rs  signature.rs
src/elliptic_curve/: curve_field.rs  ecc_point.rs  mod.rs
src/finite_fields/: field_element.rs  mod.rs  modulo_helper.rs
src/networking/: network.rs
src/script/: helper.rs  mod.rs  op_codes.rs  op_codes_helper.rs  script.rs
src/transactions/: helper.rs  mod.rs  tx.rs  tx_fetcher.rs  tx_in.rs  tx_out.rs
src/utils/: errors.rs
tests/: finite_field_tests.rs  generator_point_tests.rs  point_curve_tests.rs  serialize_deserialize_cryto_tests.rs  sign_verify_tests.rs
