[package]
name = "mini-bitoin"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
hmac = "0.13.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
once_cell = "1.21.4"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
ripemd = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
